--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -1,6 +1,6 @@
 # todo list for Augest 2023
 
-position editor, 'tri12 project', videoground, THREEJS, Linux
+position editor, 'tri32 project', videoground, THREEJS, Linux
 
 <!-------- ----------
 -- videoground
@@ -18,11 +18,12 @@ position editor, 'tri12 project', videoground, THREEJS, Linux
 <!-------- ----------
 -- NEW POST IDEAS FOR LINUX
 ---------- --------->
-* () new : linux-apt - start a post on the main apt command
 * () new : linux-visudo - see about working out a post on using visudo and adding a new user
 * () new : linux-lsof - start new post on listing open files
-
-
+* () new : linux-rpi-imager - look into using rpi-imager
+* () new : linux-musescore - start a main post on musescore
+* () new : linux-raspberry-pi-os - start a main blog post on raspbery pi os
+* () new : linux-debian - start a main post on debian linux
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
@@ -36,4 +37,14 @@ position editor, 'tri12 project', videoground, THREEJS, Linux
 * () new: start post # 1065 on threejs-
 
 ### () - TUE 08/01/2023
-* () new: start post # 1064 on linux-
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new demo on textures
+* () edit: threejs-materials - write about new demo
+<!-- edit: -->
+* () 
+<!-- new -->
+* () new: start post # 1064 on linux-folders that will be a main post on linux file system structor
+<!-- videoground-tri32 -->
+* () start a new videoground content collection repo where the goal is to make very low poly models
+
+
