--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -1,6 +1,14 @@
 # todo list for Augest 2023
 
-position editor, 'tri32 project', videoground, THREEJS, Linux
+Position editor, 'tri16 project', videoground, THREEJS, Linux
+
+This month the main this I would like to work on is a new electionjs app that will be used to create JSON data to use in threejs projects. Speaking of such I would also like to start a whole collection of content where I aim to make very low polly modules of no more than 16 triangles. I all ready have a few examples of this kind of model in my test threejs repo, but I would like to make more of them.
+
+After that more than the ushual with threejs demos, content, with a little new content on the subject of Linux topics.
+
+<!-------- ----------
+-- position editor
+---------- --------->
 
 <!-------- ----------
 -- videoground
@@ -37,14 +45,17 @@ position editor, 'tri32 project', videoground, THREEJS, Linux
 * () new: start post # 1065 on threejs-
 
 ### () - TUE 08/01/2023
+<!-- edit: -->
+* () 
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on textures
 * () edit: threejs-materials - write about new demo
-<!-- edit: -->
-* () 
 <!-- new -->
-* () new: start post # 1064 on linux-folders that will be a main post on linux file system structor
-<!-- videoground-tri32 -->
-* () start a new videoground content collection repo where the goal is to make very low poly models
+* () new: start post # 1064 on linux-folders that will be a main post on linux file system structure
+<!-- electionjs -->
+* () proto: geometry-position : more work on the cursor
+<!-- videoground -->
+* () videoground-r9 : finish r9
+* () videoground-10 : start r10 of videoground
 
 
