post-check;id#: 473;v: 1.54;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -37,16 +37,24 @@ After that more than the ushual with threejs demos, content, with a little new c
 ---------- --------->
 ## () - WEEK 1 - TUE 08/01/2023 - SAT 08/05/2023
 
+### () - SAT 08/05/2023
 
-### () - THU 08/02/2023
+### () - FRI 08/04/2023
+
+### () - THU 08/03/2023
 * () new: start post # 1066 on electionjs-
 
-### () - TUE 08/02/2023
+### () - WED 08/02/2023
+<!-- edit: -->
+* () threejs-quaternion-slerp - proof read
+* () threejs-ambientlight - proof read
+<!-- new -->
 * () new: start post # 1065 on threejs-
 
 ### () - TUE 08/01/2023
 <!-- edit: -->
-* () 
+* () threejs-plane - proof read
+* () threejs-quaternion - proof read
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on textures
 * () edit: threejs-materials - write about new demo
