post-check;id#: 1064;v: 1.0;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,6 +46,7 @@ After that more than the ushual with threejs demos, content, with a little new c
 
 ### () - WED 08/02/2023
 <!-- edit: -->
+* () linux-folders - expand on this more
 * () threejs-quaternion-slerp - proof read
 * () threejs-ambientlight - proof read
 <!-- new -->
@@ -53,13 +54,13 @@ After that more than the ushual with threejs demos, content, with a little new c
 
 ### () - TUE 08/01/2023
 <!-- edit: -->
-* () threejs-plane - proof read
+* (done) threejs-plane - proof read
 * () threejs-quaternion - proof read
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on textures
 * () edit: threejs-materials - write about new demo
 <!-- new -->
-* () new: start post # 1064 on linux-folders that will be a main post on linux file system structure
+* (done) new: start post # 1064 on linux-folders that will be a main post on linux file system structure
 <!-- electionjs -->
 * () proto: geometry-position : more work on the cursor
 <!-- videoground -->
