post-check;id#: 181;v: 1.84;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -49,6 +49,9 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () linux-folders - expand on this more
 * () threejs-quaternion-slerp - proof read
 * () threejs-ambientlight - proof read
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new demo on textures
+* () edit: threejs-materials - write about new demo
 <!-- new -->
 * () new: start post # 1065 on threejs-
 
@@ -57,9 +60,8 @@ After that more than the ushual with threejs demos, content, with a little new c
 * (done) threejs-plane - proof read
 <!-- edit: -->
 * () threejs-quaternion - proof read
-<!-- edit 5k+ -->
-* () forpost: threejs-materials - new demo on textures
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - new demo on textures
+* (done) edit: threejs-materials - write about new demo
 
 <!-- electionjs -->
 * () proto: geometry-position : more work on the cursor
