--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -49,11 +49,13 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () linux-folders - expand on this more
 * () threejs-quaternion-slerp - proof read
 * () threejs-ambientlight - proof read
+<!-- new -->
+* () new: start post # 1065 on threejs-matrix4
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on textures
 * () edit: threejs-materials - write about new demo
-<!-- new -->
-* () new: start post # 1065 on threejs-
+<!-- electionjs -->
+* () proto: geometry-position : work more on this demo
 
 ### () - TUE 08/01/2023
 * (done) new: start post # 1064 on linux-folders that will be a main post on linux file system structure
