post-check;id#: 885;v: 1.34;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -62,7 +62,8 @@ After that more than the ushual with threejs demos, content, with a little new c
 * (done) threejs-plane - proof read
 * (done) forpost: threejs-materials - new demo on textures
 * (done) edit: threejs-materials - write about new demo
-* () threejs-quaternion - proof read
+* (done) threejs-quaternion - proof read
+* (done) edit: threejs-buffer-geometry-attributes-uv - write abiut new rotation demo for plane geometry
 <!-- electionjs -->
 * () proto: geometry-position : more work on the cursor
 <!-- videoground -->
