post-check;id#: 1064;v: 1.3;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -45,8 +45,8 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () new: start post # 1066 on electionjs-
 
 ### () - WED 08/02/2023
+* (done) linux-folders - expand on this more
 <!-- edit: -->
-* () linux-folders - expand on this more
 * () threejs-quaternion-slerp - proof read
 * () threejs-ambientlight - proof read
 <!-- new -->
@@ -56,6 +56,9 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () edit: threejs-materials - write about new demo
 <!-- electionjs -->
 * () proto: geometry-position : work more on this demo
+<!-- videoground -->
+* () videoground-r9 : finish r9
+* () videoground-10 : start r10 of videoground
 
 ### () - TUE 08/01/2023
 * (done) new: start post # 1064 on linux-folders that will be a main post on linux file system structure
@@ -64,10 +67,6 @@ After that more than the ushual with threejs demos, content, with a little new c
 * (done) edit: threejs-materials - write about new demo
 * (done) threejs-quaternion - proof read
 * (done) edit: threejs-buffer-geometry-attributes-uv - write abiut new rotation demo for plane geometry
-<!-- electionjs -->
-* () proto: geometry-position : more work on the cursor
-<!-- videoground -->
-* () videoground-r9 : finish r9
-* () videoground-10 : start r10 of videoground
+* (done) proto: geometry-position : more work on the cursor
 
 
