--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,9 +46,9 @@ After that more than the ushual with threejs demos, content, with a little new c
 
 ### () - WED 08/02/2023
 * (done) linux-folders - expand on this more
+* (done) threejs-ambientlight - proof read
 <!-- edit: -->
 * () threejs-quaternion-slerp - proof read
-* () threejs-ambientlight - proof read
 <!-- new -->
 * () new: start post # 1065 on threejs-matrix4
 <!-- edit 5k+ -->
