post-check;id#: 1065;v: 1.0;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -42,14 +42,18 @@ After that more than the ushual with threejs demos, content, with a little new c
 ### () - FRI 08/04/2023
 
 ### () - THU 08/03/2023
+<!-- edit -->
+* () threejs-matrix4 - write more demos
+* () threejs-matrix4 - write about new demos
+<!-- new -->
 * () new: start post # 1066 on electionjs-
 
 ### () - WED 08/02/2023
 * (done) linux-folders - expand on this more
 * (done) threejs-ambientlight - proof read
 * (done) threejs-quaternion-slerp - proof read
-<!-- new -->
-* () new: start post # 1065 on threejs-matrix4
+* (done) forpost: threejs-matrix4 - start the forpost folder and have at least one basic demo
+* (done) new: start post # 1065 on threejs-matrix4
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on textures
 * () edit: threejs-materials - write about new demo
