post-check;id#: 181;v: 1.85;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -47,6 +47,9 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () threejs-matrix4 - write about new demos
 <!-- new -->
 * () new: start post # 1066 on electionjs-
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new demo on common basic example
+* () edit: threejs-materials - write about new demo
 
 ### () - WED 08/02/2023
 * (done) linux-folders - expand on this more
@@ -54,9 +57,8 @@ After that more than the ushual with threejs demos, content, with a little new c
 * (done) threejs-quaternion-slerp - proof read
 * (done) forpost: threejs-matrix4 - start the forpost folder and have at least one basic demo
 * (done) new: start post # 1065 on threejs-matrix4
-<!-- edit 5k+ -->
-* () forpost: threejs-materials - new demo on textures
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - new demo on points
+* (done) edit: threejs-materials - write about new demo
 <!-- electionjs -->
 * () proto: geometry-position : work more on this demo
 <!-- videoground -->
