post-check;id#: 1065;v: 1.1;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -32,6 +32,14 @@ After that more than the ushual with threejs demos, content, with a little new c
 * () new : linux-musescore - start a main post on musescore
 * () new : linux-raspberry-pi-os - start a main blog post on raspbery pi os
 * () new : linux-debian - start a main post on debian linux
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
+<!-- new -->
+* () new: start post # 1066 on threejs-
+
 <!-------- ----------
 -- WEEK 1
 ---------- --------->
@@ -43,13 +51,21 @@ After that more than the ushual with threejs demos, content, with a little new c
 
 ### () - THU 08/03/2023
 <!-- edit -->
-* () threejs-matrix4 - write more demos
-* () threejs-matrix4 - write about new demos
-<!-- new -->
-* () new: start post # 1066 on electionjs-
+* () edit: threejs-matrix4 - write getting started section
+* () forpost: threejs-matrix4 - write more demos
+* () forpost: threejs-matrix4 - README
+* () edit: threejs-matrix4 - write about new demos
+* () edit: threejs-matrix4 - concusion
+* () edit: threejs-webgl - proof read
+* () edit: threejs-fog - proof read
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on common basic example
 * () edit: threejs-materials - write about new demo
+<!-- electionjs -->
+* () proto: geometry-position : work more on this demo
+<!-- videoground -->
+* () videoground-r9 : finish r9
+* () videoground-10 : start r10 of videoground
 
 ### () - WED 08/02/2023
 * (done) linux-folders - expand on this more
@@ -59,11 +75,7 @@ After that more than the ushual with threejs demos, content, with a little new c
 * (done) new: start post # 1065 on threejs-matrix4
 * (done) forpost: threejs-materials - new demo on points
 * (done) edit: threejs-materials - write about new demo
-<!-- electionjs -->
-* () proto: geometry-position : work more on this demo
-<!-- videoground -->
-* () videoground-r9 : finish r9
-* () videoground-10 : start r10 of videoground
+* (done) proto: geometry-position : work more on this demo
 
 ### () - TUE 08/01/2023
 * (done) new: start post # 1064 on linux-folders that will be a main post on linux file system structure
