post-check;id#: 1065;v: 1.2;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -51,7 +51,7 @@ After that more than the ushual with threejs demos, content, with a little new c
 
 ### () - THU 08/03/2023
 <!-- edit -->
-* () edit: threejs-matrix4 - write getting started section
+* (done) edit: threejs-matrix4 - write getting started section
 * () forpost: threejs-matrix4 - write more demos
 * () forpost: threejs-matrix4 - README
 * () edit: threejs-matrix4 - write about new demos
