post-check;id#: 1065;v: 1.3;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -4,7 +4,7 @@ Position editor, 'tri16 project', videoground, THREEJS, Linux
 
 This month the main this I would like to work on is a new electionjs app that will be used to create JSON data to use in threejs projects. Speaking of such I would also like to start a whole collection of content where I aim to make very low polly modules of no more than 16 triangles. I all ready have a few examples of this kind of model in my test threejs repo, but I would like to make more of them.
 
-After that more than the ushual with threejs demos, content, with a little new content on the subject of Linux topics.
+After that more than the usual with threejs demos, content, with a little new content on the subject of Linux topics.
 
 <!-------- ----------
 -- position editor
@@ -52,10 +52,10 @@ After that more than the ushual with threejs demos, content, with a little new c
 ### () - THU 08/03/2023
 <!-- edit -->
 * (done) edit: threejs-matrix4 - write getting started section
-* () forpost: threejs-matrix4 - write more demos
-* () forpost: threejs-matrix4 - README
-* () edit: threejs-matrix4 - write about new demos
-* () edit: threejs-matrix4 - concusion
+* (done) forpost: threejs-matrix4 - write more demos
+* (done) forpost: threejs-matrix4 - README
+* (done) edit: threejs-matrix4 - write about new demos
+* () edit: threejs-matrix4 - conclusion
 * () edit: threejs-webgl - proof read
 * () edit: threejs-fog - proof read
 <!-- edit 5k+ -->
