post-check;id#: 1065;v: 1.4;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -55,7 +55,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-matrix4 - write more demos
 * (done) forpost: threejs-matrix4 - README
 * (done) edit: threejs-matrix4 - write about new demos
-* () edit: threejs-matrix4 - conclusion
+* (done) edit: threejs-matrix4 - conclusion
 * () edit: threejs-webgl - proof read
 * () edit: threejs-fog - proof read
 <!-- edit 5k+ -->
