post-check;id#: 176;v: 1.63;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -1,4 +1,4 @@
-# todo list for Augest 2023
+# todo list for August 2023
 
 Position editor, 'tri16 project', videoground, THREEJS, Linux
 
@@ -56,8 +56,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-matrix4 - README
 * (done) edit: threejs-matrix4 - write about new demos
 * (done) edit: threejs-matrix4 - conclusion
-* () edit: threejs-webgl - proof read
-* () edit: threejs-fog - proof read
+* (done) edit: threejs-webgl - proof read
+* (done) edit: threejs-fog - proof read
 <!-- edit 5k+ -->
 * () forpost: threejs-materials - new demo on common basic example
 * () edit: threejs-materials - write about new demo
