post-check;id#: 181;v: 1.87;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -48,6 +48,11 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - SAT 08/05/2023
 
 ### () - FRI 08/04/2023
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new demo on common basic example
+* () edit: threejs-materials - write about new demo
+<!-- PUBLISH -->
+* () build and publish
 
 ### () - THU 08/03/2023
 <!-- edit -->
@@ -58,9 +63,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: threejs-matrix4 - conclusion
 * (done) edit: threejs-webgl - proof read
 * (done) edit: threejs-fog - proof read
-<!-- edit 5k+ -->
-* () forpost: threejs-materials - new demo on common basic example
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - new demo on common basic example
+* (done) edit: threejs-materials - write about new demo
 <!-- electionjs -->
 * () proto: geometry-position : work more on this demo
 <!-- videoground -->
