--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -66,7 +66,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-materials - new demo on common basic example
 * (done) edit: threejs-materials - write about new demo
 <!-- electionjs -->
-* () proto: geometry-position : work more on this demo
+* () proto: geometry-position : work more on the prototype
 <!-- videoground -->
 * () videoground-r9 : finish r9
 * () videoground-10 : start r10 of videoground
