post-check;id#: 181;v: 1.90;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -48,9 +48,8 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - SAT 08/05/2023
 
 ### () - FRI 08/04/2023
-<!-- edit 5k+ -->
-* () forpost: threejs-materials - new demo on common basic example
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - new basic demo
+* (done) edit: threejs-materials - write about new demo
 <!-- PUBLISH -->
 * () build and publish
 
