post-check;id#: 318;v: 1.34;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -50,8 +50,8 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - FRI 08/04/2023
 * (done) forpost: threejs-materials - new basic demo
 * (done) edit: threejs-materials - write about new demo
+* (done) edit: threejs-export-webm-whammy - proof read
 <!-- edit -->
-* () edit: threejs-export-webm-whammy - proof read
 * () edit: threejs-object3d-get-by-name - proof read
 <!-- PUBLISH -->
 * () build and publish
