post-check;id#: 865;v: 1.39;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -51,8 +51,7 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-materials - new basic demo
 * (done) edit: threejs-materials - write about new demo
 * (done) edit: threejs-export-webm-whammy - proof read
-<!-- edit -->
-* () edit: threejs-object3d-get-by-name - proof read
+* (done) edit: threejs-object3d-get-by-name - proof read
 <!-- PUBLISH -->
 * () build and publish
 
