post-check;id#: 181;v: 1.91;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,14 +46,16 @@ After that more than the usual with threejs demos, content, with a little new co
 ## () - WEEK 1 - TUE 08/01/2023 - SAT 08/05/2023
 
 ### () - SAT 08/05/2023
+* (done) forpost: threejs-materials - new loader demo
+<!-- PUBLISH -->
+* () build and publish
 
 ### () - FRI 08/04/2023
 * (done) forpost: threejs-materials - new basic demo
 * (done) edit: threejs-materials - write about new demo
 * (done) edit: threejs-export-webm-whammy - proof read
 * (done) edit: threejs-object3d-get-by-name - proof read
-<!-- PUBLISH -->
-* () build and publish
+
 
 ### () - THU 08/03/2023
 <!-- edit -->
