post-check;id#: 181;v: 1.95;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -37,8 +37,29 @@ After that more than the usual with threejs demos, content, with a little new co
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
+
+
+### () - TUE 08/08/2023
 <!-- new -->
 * () new: start post # 1066 on threejs-
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new material array demo
+* () forpost: threejs-materials - write about new material array demo
+
+### () - MON 08/07/2023
+<!-- edit -->
+* () edit: threejs-grouping-mesh-objects - 
+* () edit: threejs-face3-color - 
+<!-- edit 5k+ -->
+* (done) forpost: threejs-materials - new material array demo
+* () edit: threejs-materials - write about new material array demo
+* () edit: threejs-buffer-geometry - start with some editing on this one
+<!-- electionjs -->
+* () electionjs - work on position editior
+
+
+### () - SUN 08/06/2023
+ (done) forpost: threejs-materials - new basic section demo
 
 <!-------- ----------
 -- WEEK 1
@@ -47,8 +68,7 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - SAT 08/05/2023
 * (done) forpost: threejs-materials - new loader demo
-<!-- PUBLISH -->
-* () build and publish
+* (done) build and publish
 
 ### () - FRI 08/04/2023
 * (done) forpost: threejs-materials - new basic demo
