post-check;id#: 188;v: 1.46;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -48,11 +48,10 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - MON 08/07/2023
 <!-- edit -->
-* () edit: threejs-grouping-mesh-objects - 
-* () edit: threejs-face3-color - 
+* (done) edit: threejs-grouping-mesh-objects - proof read
 <!-- edit 5k+ -->
 * (done) forpost: threejs-materials - new material array demo
-* () edit: threejs-materials - write about new material array demo
+* (done) edit: threejs-materials - write about new material array demo
 * () edit: threejs-buffer-geometry - start with some editing on this one
 <!-- electionjs -->
 * () electionjs - work on position editior
