post-check;id#: 181;v: 1.103;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -39,23 +39,22 @@ After that more than the usual with threejs demos, content, with a little new co
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
 
 
-### () - TUE 08/08/2023
 <!-- new -->
 * () new: start post # 1066 on threejs-
 <!-- edit 5k+ -->
-* () forpost: threejs-materials - new material array demo
-* () forpost: threejs-materials - write about new material array demo
-
-### () - MON 08/07/2023
-<!-- edit -->
-* (done) edit: threejs-grouping-mesh-objects - proof read
-<!-- edit 5k+ -->
-* (done) forpost: threejs-materials - new material array demo
-* (done) edit: threejs-materials - write about new material array demo
 * () edit: threejs-buffer-geometry - start with some editing on this one
 <!-- electionjs -->
-* () electionjs - work on position editior
+* () electionjs - work on position editor
 
+### () - TUE 08/08/2023
+* (done) forpost: threejs-materials - new shader material demo
+* (done) forpost: threejs-materials - write about new demo
+* (done) videoground-blog-posts - shader section video2 for threejs-materials
+
+### () - MON 08/07/2023
+* (done) edit: threejs-grouping-mesh-objects - proof read
+* (done) forpost: threejs-materials - new material array demo
+* (done) edit: threejs-materials - write about new material array demo
 
 ### () - SUN 08/06/2023
  (done) forpost: threejs-materials - new basic section demo
