--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -46,6 +46,9 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-- electionjs -->
 * () electionjs - work on position editor
 
+### () - WED 08/09/2023
+* * (done) forpost: threejs-materials - proof read
+
 ### () - TUE 08/08/2023
 * (done) forpost: threejs-materials - new shader material demo
 * (done) forpost: threejs-materials - write about new demo
