--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -38,9 +38,12 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
 
-
+### () - THU 08/10/2023
+* (done) forpost: threejs-materials - new matcap demo for mesh section
+* (done) edit: threejs-materials - write about new matcap demo
 <!-- new -->
-* () new: start post # 1066 on threejs-
+* () forpost: start a threejs-matcap-material for post folder
+* () new: start post # 1066 on threejs-matcap-material
 <!-- edit 5k+ -->
 * () edit: threejs-buffer-geometry - start with some editing on this one
 <!-- electionjs -->
