post-check;id#: 1066;v: 1.0;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -41,9 +41,8 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - THU 08/10/2023
 * (done) forpost: threejs-materials - new matcap demo for mesh section
 * (done) edit: threejs-materials - write about new matcap demo
-<!-- new -->
-* () forpost: start a threejs-matcap-material for post folder
-* () new: start post # 1066 on threejs-matcap-material
+* (done) forpost: start a threejs-matcap-material for post folder
+* (done) new: start post # 1066 on threejs-matcap-material
 <!-- edit 5k+ -->
 * () edit: threejs-buffer-geometry - start with some editing on this one
 <!-- electionjs -->
