post-check;id#: 181;v: 1.108;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -38,15 +38,23 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
 
+### () - FRI 
+* (done) forpost: threejs-materials - new fog section demo
+* (done) edit: threejs-materials - write about new for demo
+<!-- edit 5k+ -->
+* () edit: threejs-buffer-geometry - start with some editing on this one
+<!-- edit -->
+* () edit: threejs-matcap-material - write about loop section demo
+* () videoground-blog-posts - make video1 for threejs-matcap-material
+* () edit: threejs-matcap-material - embed video1
+<!-- electionjs -->
+* () electionjs - work on position editor
+
 ### () - THU 08/10/2023
 * (done) forpost: threejs-materials - new matcap demo for mesh section
 * (done) edit: threejs-materials - write about new matcap demo
 * (done) forpost: start a threejs-matcap-material for post folder
 * (done) new: start post # 1066 on threejs-matcap-material
-<!-- edit 5k+ -->
-* () edit: threejs-buffer-geometry - start with some editing on this one
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - WED 08/09/2023
 * * (done) forpost: threejs-materials - proof read
