post-check;id#: 181;v: 1.109;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -42,6 +42,9 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-materials - new fog section demo
 * (done) edit: threejs-materials - write about new for demo
 <!-- edit 5k+ -->
+* () forpost: threejs-materials - expand s1-7-basic demo to be more on map options
+* () edit: threejs-materials - write about new s1-7-basic demo
+
 * () edit: threejs-buffer-geometry - start with some editing on this one
 <!-- edit -->
 * () edit: threejs-matcap-material - write about loop section demo
