--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -38,20 +38,22 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
 
-### () - FRI 
-* (done) forpost: threejs-materials - new fog section demo
-* (done) edit: threejs-materials - write about new for demo
+### () - SAT 08/12/2023
 <!-- edit 5k+ -->
-* () forpost: threejs-materials - expand s1-7-basic demo to be more on map options
-* () edit: threejs-materials - write about new s1-7-basic demo
-
 * () edit: threejs-buffer-geometry - start with some editing on this one
+* () edit: threejs-materials - proof read section 2 on mesh matreials
 <!-- edit -->
 * () edit: threejs-matcap-material - write about loop section demo
 * () videoground-blog-posts - make video1 for threejs-matcap-material
 * () edit: threejs-matcap-material - embed video1
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+### () - FRI 08/11/2023 
+* (done) forpost: threejs-materials - new fog section demo
+* (done) edit: threejs-materials - write about new for demo
+* (done) forpost: threejs-materials - expand s1-7-basic demo to be more on map options
+* (done) edit: threejs-materials - write about new s1-7-basic demo
 
 ### () - THU 08/10/2023
 * (done) forpost: threejs-materials - new matcap demo for mesh section
