post-check;id#: 181;v: 1.113;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -34,14 +34,24 @@ After that more than the usual with threejs demos, content, with a little new co
 * () new : linux-debian - start a main post on debian linux
 
 <!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 08/13/2023 - SAT 08/19/2023
+
+<!-- edit 5k+ -->
+* () edit: threejs-materials - proof read section 3 - line materials
+* () edit: threejs-materials - proof read section 4 - point materials
+
+<!-------- ----------
 -- WEEK 2
 ---------- --------->
 ## () - WEEK 2 - SUN 08/06/2023 - SAT 08/12/2023
 
 ### () - SAT 08/12/2023
+* (done) edit: threejs-materials - proof read section 2 on mesh matreials
 <!-- edit 5k+ -->
 * () edit: threejs-buffer-geometry - start with some editing on this one
-* () edit: threejs-materials - proof read section 2 on mesh matreials
+
 <!-- edit -->
 * () edit: threejs-matcap-material - write about loop section demo
 * () videoground-blog-posts - make video1 for threejs-matcap-material
