post-check;id#: 851;v: 1.65;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -49,12 +49,11 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - SAT 08/12/2023
 * (done) edit: threejs-materials - proof read section 2 on mesh matreials
-<!-- edit 5k+ -->
-* () edit: threejs-buffer-geometry - start with some editing on this one
-
+* (done) edit: threejs-buffer-geometry - start with some editing on this one
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts - make video1 for threejs-matcap-material
 <!-- edit -->
 * () edit: threejs-matcap-material - write about loop section demo
-* () videoground-blog-posts - make video1 for threejs-matcap-material
 * () edit: threejs-matcap-material - embed video1
 <!-- electionjs -->
 * () electionjs - work on position editor
