--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -41,6 +41,8 @@ After that more than the usual with threejs demos, content, with a little new co
 <!-- edit 5k+ -->
 * () edit: threejs-materials - proof read section 3 - line materials
 * () edit: threejs-materials - proof read section 4 - point materials
+* () edit: threejs-buffer-geometry - going to want more methods section demos for sure
+* () edit: threejs-buffer-geometry - write about new method section demo
 
 <!-------- ----------
 -- WEEK 2
