post-check;id#: 181;v: 1.114;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -38,11 +38,22 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 ## () - WEEK 3 - SUN 08/13/2023 - SAT 08/19/2023
 
+
 <!-- edit 5k+ -->
 * () edit: threejs-materials - proof read section 3 - line materials
 * () edit: threejs-materials - proof read section 4 - point materials
 * () edit: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
+
+### () - SUN 08/13/2023
+* (done) edit: threejs-materials - new demo on sprites
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts - make video1 for threejs-matcap-material
+<!-- edit -->
+* () edit: threejs-matcap-material - write about loop section demo
+* () edit: threejs-matcap-material - embed video1
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 <!-------- ----------
 -- WEEK 2
@@ -52,13 +63,6 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - SAT 08/12/2023
 * (done) edit: threejs-materials - proof read section 2 on mesh matreials
 * (done) edit: threejs-buffer-geometry - start with some editing on this one
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts - make video1 for threejs-matcap-material
-<!-- edit -->
-* () edit: threejs-matcap-material - write about loop section demo
-* () edit: threejs-matcap-material - embed video1
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - FRI 08/11/2023 
 * (done) forpost: threejs-materials - new fog section demo
