--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -47,6 +47,7 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - SUN 08/13/2023
 * (done) edit: threejs-materials - new demo on sprites
+* (done) edit: threejs-buffer-geometry - write about updated light section
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts - make video1 for threejs-matcap-material
 <!-- edit -->
