post-check;id#: 181;v: 1.115;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -38,16 +38,23 @@ After that more than the usual with threejs demos, content, with a little new co
 ---------- --------->
 ## () - WEEK 3 - SUN 08/13/2023 - SAT 08/19/2023
 
+### () - SAT 08/19/2023
 
+### () - FRI 08/18/2023
+
+### () - THU 08/17/2023
+
+### () - WED 08/16/2023
+
+### () - TUE 08/15/2023
+
+### () - MON 08/14/2023
+* (done) videoground : worked on video21 for r10
 <!-- edit 5k+ -->
 * () edit: threejs-materials - proof read section 3 - line materials
 * () edit: threejs-materials - proof read section 4 - point materials
 * () edit: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
-
-### () - SUN 08/13/2023
-* (done) edit: threejs-materials - new demo on sprites
-* (done) edit: threejs-buffer-geometry - write about updated light section
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts - make video1 for threejs-matcap-material
 <!-- edit -->
@@ -55,6 +62,10 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-matcap-material - embed video1
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+### () - SUN 08/13/2023
+* (done) edit: threejs-materials - new demo on sprites
+* (done) edit: threejs-buffer-geometry - write about updated light section
 
 <!-------- ----------
 -- WEEK 2
