--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -50,9 +50,9 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - MON 08/14/2023
 * (done) videoground : worked on video21 for r10
+* (done) edit: threejs-materials - proof read section 3 - point materials
+* (done) edit: threejs-materials - proof read section 4 - line materials
 <!-- edit 5k+ -->
-* () edit: threejs-materials - proof read section 3 - line materials
-* () edit: threejs-materials - proof read section 4 - point materials
 * () edit: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground-blog-posts -->
