post-check;id#: 851;v: 1.69;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -47,13 +47,17 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - WED 08/16/2023
 
 ### () - TUE 08/15/2023
+<!-- edit 5k+ -->
+* () forpost: theejs-materials - new points section demo
+* () edit: theejs-materials - new points section demo
+* () edit: threejs-materials - proof read section 5 sprites
 
 ### () - MON 08/14/2023
 * (done) videoground : worked on video21 for r10
 * (done) edit: threejs-materials - proof read section 3 - point materials
 * (done) edit: threejs-materials - proof read section 4 - line materials
 <!-- edit 5k+ -->
-* () edit: threejs-buffer-geometry - going to want more methods section demos for sure
+* () forpost: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts - make video1 for threejs-matcap-material
