post-check;id#: 181;v: 1.117;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -45,20 +45,20 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - THU 08/17/2023
 
 ### () - WED 08/16/2023
+<!-- edit 5k+ -->
+* () edit: threejs-materials - proof read section 6 on common features
 
 ### () - TUE 08/15/2023
+* (done) edit: threejs-materials - proof read section 5 sprites
 <!-- edit 5k+ -->
 * () forpost: theejs-materials - new points section demo
 * () edit: theejs-materials - new points section demo
-* () edit: threejs-materials - proof read section 5 sprites
-
-### () - MON 08/14/2023
-* (done) videoground : worked on video21 for r10
-* (done) edit: threejs-materials - proof read section 3 - point materials
-* (done) edit: threejs-materials - proof read section 4 - line materials
-<!-- edit 5k+ -->
 * () forpost: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
+<!-- videoground r10 -->
+* () videoground: work more on video21
+<!-- videoground-beta-world -->
+* () videoground-beta-world - start a new video project on audio synth
 <!-- videoground-blog-posts -->
 * () videoground-blog-posts - make video1 for threejs-matcap-material
 <!-- edit -->
@@ -66,6 +66,11 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-matcap-material - embed video1
 <!-- electionjs -->
 * () electionjs - work on position editor
+
+### () - MON 08/14/2023
+* (done) videoground : worked on video21 for r10
+* (done) edit: threejs-materials - proof read section 3 - point materials
+* (done) edit: threejs-materials - proof read section 4 - line materials
 
 ### () - SUN 08/13/2023
 * (done) edit: threejs-materials - new demo on sprites
