post-check;id#: 181;v: 1.118;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -50,9 +50,9 @@ After that more than the usual with threejs demos, content, with a little new co
 
 ### () - TUE 08/15/2023
 * (done) edit: threejs-materials - proof read section 5 sprites
+* (done) forpost: theejs-materials - new points section demo
+* (done) edit: theejs-materials - new points section demo
 <!-- edit 5k+ -->
-* () forpost: theejs-materials - new points section demo
-* () edit: theejs-materials - new points section demo
 * () forpost: threejs-buffer-geometry - going to want more methods section demos for sure
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground r10 -->
