post-check;id#: 851;v: 1.70;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -47,14 +47,15 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - WED 08/16/2023
 <!-- edit 5k+ -->
 * () edit: threejs-materials - proof read section 6 on common features
+* () forpost: threejs-buffer-geometry - new methods section demo
+* () edit: threejs-buffer-geometry - write about new method section demo
 
 ### () - TUE 08/15/2023
 * (done) edit: threejs-materials - proof read section 5 sprites
 * (done) forpost: theejs-materials - new points section demo
 * (done) edit: theejs-materials - new points section demo
-<!-- edit 5k+ -->
-* () forpost: threejs-buffer-geometry - going to want more methods section demos for sure
-* () edit: threejs-buffer-geometry - write about new method section demo
+* (done) forpost: threejs-buffer-geometry - new methods section demo
+* (done) edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground r10 -->
 * () videoground: work more on video21
 <!-- videoground-beta-world -->
