--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -56,15 +56,14 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: theejs-materials - new points section demo
 * (done) forpost: threejs-buffer-geometry - new methods section demo
 * (done) edit: threejs-buffer-geometry - write about new method section demo
+* (done) edit: threejs-matcap-material - write about loop section demo
+<!-- videoground-blog-posts -->
+* () videoground-blog-posts - make video1 for threejs-matcap-material
+* () edit: threejs-matcap-material - embed video1
 <!-- videoground r10 -->
 * () videoground: work more on video21
 <!-- videoground-beta-world -->
 * () videoground-beta-world - start a new video project on audio synth
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts - make video1 for threejs-matcap-material
-<!-- edit -->
-* () edit: threejs-matcap-material - write about loop section demo
-* () edit: threejs-matcap-material - embed video1
 <!-- electionjs -->
 * () electionjs - work on position editor
 
