post-check;id#: 1066;v: 1.4;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -57,9 +57,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) forpost: threejs-buffer-geometry - new methods section demo
 * (done) edit: threejs-buffer-geometry - write about new method section demo
 * (done) edit: threejs-matcap-material - write about loop section demo
-<!-- videoground-blog-posts -->
-* () videoground-blog-posts - make video1 for threejs-matcap-material
-* () edit: threejs-matcap-material - embed video1
+* (done) videoground-blog-posts - make video1 for threejs-matcap-material
+* (done) edit: threejs-matcap-material - embed video1
 <!-- videoground r10 -->
 * () videoground: work more on video21
 <!-- videoground-beta-world -->
