--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -49,6 +49,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-materials - proof read section 6 on common features
 * () forpost: threejs-buffer-geometry - new methods section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
+<!-- videoground r10 -->
+* () videoground: still trying to work out a good system for over all display of sample data
 
 ### () - TUE 08/15/2023
 * (done) edit: threejs-materials - proof read section 5 sprites
@@ -59,8 +61,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) edit: threejs-matcap-material - write about loop section demo
 * (done) videoground-blog-posts - make video1 for threejs-matcap-material
 * (done) edit: threejs-matcap-material - embed video1
-<!-- videoground r10 -->
-* () videoground: work more on video21
+* (done) videoground: work more on video21
+
 <!-- videoground-beta-world -->
 * () videoground-beta-world - start a new video project on audio synth
 <!-- electionjs -->
