--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -43,6 +43,7 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - FRI 08/18/2023
 
 ### () - THU 08/17/2023
+* () new: start post # 1067 on threejs-
 
 ### () - WED 08/16/2023
 <!-- edit 5k+ -->
@@ -51,6 +52,10 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- videoground r10 -->
 * () videoground: still trying to work out a good system for over all display of sample data
+<!-- videoground-beta-world -->
+* () videoground-beta-world - start a new video project on audio synth
+<!-- electionjs -->
+* () electionjs - work on position editor
 
 ### () - TUE 08/15/2023
 * (done) edit: threejs-materials - proof read section 5 sprites
@@ -62,11 +67,6 @@ After that more than the usual with threejs demos, content, with a little new co
 * (done) videoground-blog-posts - make video1 for threejs-matcap-material
 * (done) edit: threejs-matcap-material - embed video1
 * (done) videoground: work more on video21
-
-<!-- videoground-beta-world -->
-* () videoground-beta-world - start a new video project on audio synth
-<!-- electionjs -->
-* () electionjs - work on position editor
 
 ### () - MON 08/14/2023
 * (done) videoground : worked on video21 for r10
