post-check;id#: 181;v: 1.119;

--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -43,13 +43,20 @@ After that more than the usual with threejs demos, content, with a little new co
 ### () - FRI 08/18/2023
 
 ### () - THU 08/17/2023
+<!-- new -->
 * () new: start post # 1067 on threejs-
+<!-- edit 5k+ -->
+* () forpost: threejs-materials - new blending demo blending
+* () edit: threejs-materials - write about new blending demo
+* () edit: threejs-materials - proof read section 7 on blending
 
 ### () - WED 08/16/2023
 <!-- edit 5k+ -->
 * () edit: threejs-materials - proof read section 6 on common features
 * () forpost: threejs-buffer-geometry - new methods section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
+<!-- new -->
+* () start some r152 prototypes and a for post folder for tomorrows new post
 <!-- videoground r10 -->
 * () videoground: still trying to work out a good system for over all display of sample data
 <!-- videoground-beta-world -->
