--- a/todo/today/todo_2023_08.md
+++ b/todo/today/todo_2023_08.md
@@ -51,8 +51,8 @@ After that more than the usual with threejs demos, content, with a little new co
 * () edit: threejs-materials - proof read section 7 on blending
 
 ### () - WED 08/16/2023
+* (done) edit: threejs-materials - proof read section 6 on common features
 <!-- edit 5k+ -->
-* () edit: threejs-materials - proof read section 6 on common features
 * () forpost: threejs-buffer-geometry - new methods section demo
 * () edit: threejs-buffer-geometry - write about new method section demo
 <!-- new -->
